# transacto

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
src/: data.rs  lib.rs  main.rs
src/accounting/: client.rs  ledger.rs  mod.rs  transaction_tests.rs  transactions.rs
